Allow MB, GB and CYL (not just M, G and C) and lower case. Don't output a splurious 'd' before "cyl". Fixes PR/37414. Patch in PR is wrong!